overflow fix 2

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,7 +12,6 @@
     @apply bg-gray-800 text-gray-200;
   }
 
-  html,
   body {
     max-width: 100vw;
     overflow-x: hidden;
